# OpenEnvoy

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh  setup.sh
.sisyphus/drafts/: ai_job_automation_architecture.md
.sisyphus/plans/: adr_ai_provider.md  ai_job_automation_architecture.md
backend/: AGENTS.md  main.py
backend/ai/: __init__.py  config_service.py  cost_tracker.py
backend/api/: __init__.py
backend/core/: __init__.py  alerting.py  cache.py  config.py  database.py  error_handler.py  logging.py  metrics.py  sentry.py  storage.py
backend/engine/: __init__.py
backend/feedback/: __init__.py  analytics.py  collector.py  optimizer.py
backend/ingestion/: __init__.py
backend/models/: __init__.py  ai_model_config.py  application.py  email.py  job.py  profile.py  resume.py  scrape_run.py  user.py
backend/schemas/: __init__.py  ai_model_config.py  analytics.py  application.py  auth.py  email.py  job.py  profile.py  resume.py  scan_run.py
backend/scrapers/: __init__.py  base.py  factory.py  pipeline.py
backend/scripts/: migrate.py
backend/utils/: __init__.py  deduplication.py  formatters.py  hashing.py  rate_limit.py  validators.py
docs/: setup.md
frontend/: .eslintrc.json  AGENTS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
migrations/: env.py
scripts/: init_db.py  linkedin_export_parser.py  seed_data.py  test_scraper.py
tests/: __init__.py  conftest.py
workers/: email_worker.py  scoring_worker.py  scraper_worker.py
(+192 files in other folders)
